# registration-toolkit

./: .clang-tidy  .gitignore  .gitignore~  Brewfile  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_and_test.yml
3Dregistration/: CMakeLists.txt
3Dregistration/include/: ReorderUnorganizedTexture.hpp
3Dregistration/src/: ReorderTexture.cpp  ReorderUnorganizedTexture.cpp  UVMapMod.h  main.cpp  manipulator.cpp  manipulator.fix_cpp  manipulator.fix_hpp  manipulator.hpp  obj_reader.cpp  obj_reader.hpp  retexture.cpp
JavaSrc/Landmark Generator/: .classpath  .classpath~  .project  build.xml
LandmarkGenerator/: .classpath  .project  LandmarkGenerator-launcher.sh  README.md
LandmarkGenerator/src/: Crosshair.java  LandmarkGenerator.java  MaskImage.java  NBJFrame.java  PicturePanel.java
apps/: CMakeLists.txt
apps/src/: ApplyTransform.cpp  ApplyTransform.cxx  BriskMatch.cpp  GenerateLandmarks.cpp  ImageSegmentationMain.cpp  LandmarkRegistration.cxx  PHerc118Pezzo4Pipeline.cpp  PlotLandmarks.cpp  RawTIFFConverter.cpp  Register.cpp  Register2D.cpp  Register3D.cpp  ReorderTexture.cpp  RetextureMesh.cpp  SegmentDisegni.cpp  StitchImages.cpp  SwapLandmarks.cpp  TextureDewarp.cpp  retexture.cpp
blending-test/: CMakeLists.txt  ImageBlend.cpp
cmake/: BuildSmeagol.cmake  Buildbvh.cmake  Config.cmake.in  Constants.cmake  FindDependencies.cmake  Install.cmake  Warnings.cmake
core/: CMakeLists.txt
core/include/rt/: AffineLandmarkRegistration.hpp  BSplineLandmarkWarping.hpp  DeformableRegistration.hpp  DisegniSegmenter.hpp  ITKImageTypes.hpp  ImageStitcher.hpp  ImageTransformResampler.hpp  LandmarkDetector.hpp  LandmarkRegistrationBase.hpp  ReorderUnorganizedTexture.hpp  Version.hpp  filesystem.hpp
core/include/rt/io/: FileExtensionFilter.hpp  ImageIO.hpp  LandmarkIO.hpp  LandmarkReader.hpp  LandmarkWriter.hpp  OBJReader.hpp  OBJWriter.hpp  TIFFIO.hpp  UVMapIO.hpp
core/include/rt/types/: Exceptions.hpp  ITK2VTK.hpp  ITKMesh.hpp  Transforms.hpp  UVMap.hpp
core/include/rt/util/: ITKOpenCVBridge.hpp  ITKOpenCVBridgeImpl.hpp  ImageConversion.hpp  PermutationSort.hpp  String.hpp
core/src/: AffineLandmarkRegistration.cpp  BSplineLandmarkWarping.cpp  CompositeTransform.cpp  DeformableRegistration.cpp  DisegniSegmenter.cpp  ITK2VTK.cpp  ImageConversion.cpp  ImageIO.cpp  ImageStitcher.cpp  ImageTransformResampler.cpp  LandmarkDetector.cpp  LandmarkIO.cpp  LandmarkReader.cpp  LandmarkWriter.cpp  OBJReader.cpp  OBJWriter.cpp  ReorderUnorganizedTexture.cpp  TIFFIO.cpp  Transforms.cpp  UVMap.cpp  UVMapIO.cpp  Version.cpp.in
doc/: CMakeLists.txt  CONTRIBUTORS.md  Doxyfile.in  Modules.dox
doc/documentation/: Registration Process - automatic manual landmarks.txt
docs/: CMakeLists.txt  Modules.dox
documentation/: Registration Process - automatic landmarks w: tiles.txt  Registration Process - automatic landmarks.txt  Steps_for_Registration_Landmark_Generator.txt
flattening/: Makefile  README  decimate.py  flatten.py  redraw.cpp
graph/: CMakeLists.txt
graph/include/rt/: graph.hpp
graph/include/rt/graph/: DeformableRegistration.hpp  ImageIO.hpp  ImageOps.hpp  LandmarkIO.hpp  LandmarkRegistration.hpp  MeshIO.hpp  MeshOps.hpp  Nodes.hpp  Transforms.hpp
graph/src/: DeformableRegistration.cpp  ImageIO.cpp  ImageOps.cpp  LandmarkIO.cpp  LandmarkRegistration.cpp  MeshIO.cpp  MeshOps.cpp  Nodes.cpp  Transforms.cpp  graph.cpp
registration/: CMakeLists.txt  DeformableRegistration13.cxx  LandmarkRegistration.cxx  LandmarkWarping2.cxx  README.md  Registration.cxx
registration/images/: Landmarks-142.txt  parameters.txt
registration/src/: ApplyTransform.cxx  DeformableRegistrationVid.cxx  LandmarkRegistration.cxx  LandmarkRegistration.h  LandmarkRegistration_OLD.cxx  VisualizeLandmarks.pl
rtlib/: CMakeLists.txt
rtlib/include/rt/: AffineLandmarkRegistration.hpp  BSplineLandmarkWarping.hpp  Data.hpp  DeformableRegistration.hpp  DisegniSegmenter.hpp  Envi.hpp  ITKImageTypes.hpp  Image.hpp  ImageStitcher.hpp  ImageTransformResampler.hpp  ImageTypes.hpp  LandmarkDetector.hpp  LandmarkIO.hpp  LandmarkReader.hpp  LandmarkRegistration.hpp  LandmarkRegistrationBase.hpp  Mesh.hpp  ReadRawTIFF.hpp  RegPkg.h  RegPkg.hpp  ReorderUnorganizedTexture.hpp  SepDisegni.hpp  SpatialObject.hpp  Version.hpp  regpkg.h
rtlib/include/rt/io/: FileExtensionFilter.hpp  ImageIO.hpp  LandmarkReader.hpp  LandmarkWriter.hpp  OBJReader.hpp  OBJWriter.hpp  ReadRawTIFF.hpp  TIFFIO.hpp
rtlib/include/rt/itk/: itkOpenCVImageBridge.h  itkOpenCVImageBridge.hxx
rtlib/include/rt/types/: CompositeTransform.hpp  Exceptions.hpp  ITK2VTK.hpp  ITKMesh.hpp  ITKOpenCVBridge.hpp  UVMap.hpp
rtlib/include/rt/util/: ITKOpenCVBridge.hpp  ImageConversion.hpp  PermutationSort.hpp
rtlib/src/: AffineLandmarkRegistration.cpp  BSplineLandmarkWarping.cpp  CompositeTransform.cpp  Data.cpp  DeformableRegistration.cpp  DisegniSegmenter.cpp  Envi.cpp  ITK2VTK.cpp  Image.cpp  ImageConversion.cpp  ImageIO.cpp  ImageStitcher.cpp  ImageTransformResampler.cpp  LandmarkDetector.cpp  LandmarkIO.cpp  LandmarkReader.cpp  LandmarkRegistration.cpp  LandmarkRegistration.cxx  LandmarkWriter.cpp  Mesh.cpp  OBJReader.cpp  OBJWriter.cpp  ReadRawTIFF.cpp  RegPkg.cpp  ReorderUnorganizedTexture.cpp  SepDisegni.cpp  SpatialObject.cpp  TIFFIO.cpp  UVMap.cpp  Version.cpp.in  regpkg.cpp
singularity/: registration-toolkit.def
smt-segmentation/: Callback.cpp  Callback.h  CanvasWindow.java  Control.cpp  Control.h  ControlPanel.java  EduceMenuBar.java  EduceProject.java  HistogramLabel.java  JavaCInterface.cpp  JavaCInterface.h  JavaCInterface.java  JavaCInterfaceAdditional  Miniture.cpp  Miniture.h  README  Selection.cpp  Selection.h  SingleFileFilter.java  Volume.cpp  Volume.h  arbitrary-slicing.cpp  educe.java  information.txt  makefile
tests/: CMakeLists.txt
tests/src/: TestITKOCVBridge.cpp  TestLandmarkIO.cpp  TestString.cpp  TestUVMapIO.cpp
utils/: auto_align.pl  auto_align_tiles.pl  autopoint_csv.pl  batch_diff.pl  build_csv.pl  divide_image.pl  plot.in  plot.pl  registration_batch.csv  visualize_landmarks.pl
(+53 files in other folders)
